# creator-claim

./: .gitignore  Anchor.toml  Cargo.toml  README.md  git-script.sh  package-lock.json  package.json
api_service/: Cargo.toml  package-lock.json  package.json  server.js
api_service/src/: auth.rs  config.rs  db.rs  handlers.rs  jwks.rs  main.rs  websocket_service.ts
extra/: creator-claim-PRD.md  info-001.md  info-002.md  progress.md
frontend/: next.config.ts  package-lock.json  tailwind.config.ts
frontend-backup/: package.json
frontend-backup/pages/: browse.tsx
frontend/.next/cache/: .rscinfo
frontend/.next/cache/webpack/client-development/: index.pack.gz.old
frontend/.next/server/: middleware-react-loadable-manifest.js  next-font-manifest.js  next-font-manifest.json  server-reference-manifest.json
frontend/.next/server/app/: page_client-reference-manifest.js
frontend/.next/server/app/favicon.ico/: route.js
frontend/.next/server/vendor-chunks/: @ethersproject.js  @irys.js  @noble.js  @scure.js  @solana-mobile.js  @solana.js  @solflare-wallet.js  @szmarczak.js  @wallet-standard.js  aes-js.js  algo-msgpack-with-bigint.js  ansi-regex.js  asynckit.js  base-x.js  base64-js.js  bech32.js  bs58.js  cacheable-request.js  chardet.js  clone.js  color-convert.js  csv-stringify.js  debug.js  decompress-response.js  depd.js  dijkstrajs.js  elliptic.js  eventemitter3.js  external-editor.js  follow-redirects.js  get-stream.js  has-flag.js  hmac-drbg.js  http-errors.js  is-fullwidth-code-point.js  jayson.js  js-base64.js  js-sha256.js  js-sha512.js  json-bigint.js  (+31 more)
frontend/.next/static/chunks/: _app-pages-browser_node_modules_solflare-wallet_metamask-sdk_lib_esm_index_js.js  _app-pages-browser_node_modules_solflare-wallet_sdk_lib_esm_index_js.js  app-pages-internals.js  webpack.js
frontend/.next/static/webpack/: webpack.0b2d18aa94406b59.hot-update.js
frontend/app/: globals.css  page.tsx  providers.tsx
frontend/app/browse/: page.tsx
frontend/app/certificate/[id]/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/history/: page.tsx
frontend/app/mint/: page.tsx
frontend/components/: CertificateList.tsx  LicenceCheckoutModal.tsx  RoyaltyStreamWidget.tsx
frontend/lib/: anchor-client.ts  api.ts
indexer/src/: db.ts  main.ts  parser.ts
lib/: api.ts
metadata_service/: README.md  package.json
metadata_service/src/: index.ts  server.ts  uploader.ts
programs/creatorclaim_certificate/: Cargo.toml
programs/creatorclaim_certificate/src/: lib.rs  state.rs
programs/creatorclaim_licence/: Cargo.toml
programs/creatorclaim_licence/src/: lib.rs  state.rs
tests/: creatorclaim_certificate.ts  creatorclaim_licence.ts
(+4 files in other folders)
