[workspace]
members = [
  "programs/*"
]
resolver = "2"

[profile.release]
overflow-checks = true

[workspace.dependencies]
anchor-lang = { version = "0.29.0", features = ["idl-build"] }
anchor-spl = { version = "0.29.0", features = ["token"] }
borsh = "0.10.0"
solana-program = "~1.16.0"
zeroize = "1.6.0"
spl-token-2022 = "0.6.0"
mpl-bubblegum = "0.6.0"
spl-account-compression = "0.1.0"